--- a/CSS/sty_home.css
+++ b/CSS/sty_home.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: font;
+    src: url("font.ttf");
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -9,7 +14,7 @@ html {
 
 body {
     box-sizing: border-box;
-    font-family: "Glory", sans-serif;
+    font-family: font;
 }
 
 header {
