--- a/CSS/sty_about.css
+++ b/CSS/sty_about.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: font;
+    src: url("font.ttf");
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -9,7 +14,7 @@ html {
 
 body {
     box-sizing: border-box;
-    font-family: "Glory", sans-serif;
+    font-family: font;
 }
 
 header {
@@ -40,17 +45,41 @@ nav ul {
 .right ul li a {
     color: aliceblue;
     text-decoration: none;
-    font-size: 1.1rem;
+    font-size: 1.3rem;
 }
 
 .right ul li a:hover {
     color: rgb(161, 198, 209);
     text-decoration: none;
-    font-size: 1.15rem;
+    font-size: 1.35rem;
 }
 
-.left {
+.open-menu , .close-menu {
+    position: absolute;
     color: aliceblue;
+    cursor: pointer;
+    font-size: 1.5rem;
+    display: none;
+}
+
+.open-menu {
+    top: 50%;
+    right: 5vh;
+    transform: translateY(-50%);
+}
+
+.close-menu {
+    top: 4vh;
+    right: 5vh;
+}
+
+#check {
+    display: none;
+}
+
+.left a{
+    color: aliceblue;
+    text-decoration: none;
     font-size: 1.9rem;
 }
 
@@ -111,5 +140,146 @@ footer div ul li a:hover {
     justify-content: center;
     align-items: center;
     font-size: 0.9rem;
+}
 
+@media only screen and (max-width: 900px){
+    nav{
+        flex-direction: column;
+    }
+    .left{
+        align-self: start;
+        padding: 3vh 0;
+        padding-left: 8vh;
+    }
+    .right{
+        width: 40%;
+        height: 70%;
+        position: fixed;
+        top: 0;
+        right: -100%;
+        z-index: 100;
+        background-color: rgb(25, 23, 31);
+        opacity: 0.95;
+        transition: all 0.2s ease-in-out;
+    }
+    .right ul{
+        margin: 15vh 2vh;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    nav ul li {
+        margin: 4vh 2vh;
+    }
+    nav ul li a {
+        padding: 10px;
+    }
+    .open-menu , .close-menu {
+        display: block;
+    }
+    #check:checked ~ .right{
+        right: 0;
+    }
+    footer {
+        padding: 2.4vw;
+        background-color: black;
+        color: azure;
+    }
+    footer .left{
+        font-size: 1.4rem;
+    } 
+    footer h1{
+        margin: 3vw 2.5vw;
+        font-size: 2rem;
+    } 
+    footer h1+div{
+        font-size: 1.5rem;
+        margin: 0vw 2.5vw;
+    }
+    footer div ul li{
+        margin: 1.2vw 8.4vw;
+        list-style: none;
+        font-size: 1rem;
+    }
+    footer div ul li a {
+        color: azure;
+        text-decoration: none;
+        font-size: 1rem;
+    }
+    footer div ul li a:hover {
+        color: beige;
+        font-size: 1.1rem;
+    }
+    .cpyr {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 0.9rem;
+    }
+}
+@media only screen and (max-width: 600px){
+    .right{
+        width: 70%;
+        height: 50%;
+        position: fixed;
+        top: 0;
+        right: -100%;
+        z-index: 100;
+        background-color: rgb(25, 23, 31);
+        opacity: 0.95;
+        transition: all 0.2s ease-in-out;
+    }
+    main {
+        display: flex;
+        flex-direction: column;
+        padding: 2rem 2.5vw;
+        background-color: azure;
+    }
+    main h1 {
+        font-size: 14vw;
+        margin: 1rem 0rem;
+    }
+    .hp {
+        font-size: 7vw;
+    }
+    .bp {
+        font-size: 5vw;
+        margin: 1rem 0rem;
+    }
+    footer {
+        padding: 2.4vw;
+        background-color: black;
+        color: azure;
+    }
+    footer .left{
+        font-size: 4vw;
+    } 
+    footer h1{
+        margin: 3vw 2.5vw;
+        font-size: 7vw;
+    } 
+    footer h1+div{
+        font-size: 5vw;
+        margin: 0vw 2.5vw;
+    }
+    footer div ul li{
+        margin: 1.2vw 8.4vw;
+        list-style: none;
+        font-size: 3vw;
+    }
+    footer div ul li a {
+        color: azure;
+        text-decoration: none;
+        font-size: 3vw;
+    }
+    footer div ul li a:hover {
+        color: beige;
+        font-size: 3.1vw;
+    }
+    .cpyr {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 2.1vw;
+    }
 }
