--- a/CSS/sty_home.css
+++ b/CSS/sty_home.css
@@ -3,6 +3,10 @@
     src: url("font.ttf");
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -25,7 +29,7 @@ header {
 }
 
 nav {
-    background-color: rgb(11, 11, 82);
+    background-color: rgb(7, 7, 60);
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -45,32 +49,56 @@ nav ul {
 .right ul li a {
     color: aliceblue;
     text-decoration: none;
-    font-size: 1.1rem;
+    font-size: 1.3rem;
 }
 
 .right ul li a:hover {
     color: rgb(161, 198, 209);
     text-decoration: none;
-    font-size: 1.15rem;
+    font-size: 1.35rem;
 }
 
-.left {
+.open-menu , .close-menu {
+    position: absolute;
     color: aliceblue;
+    cursor: pointer;
+    font-size: 1.5rem;
+    display: none;
+}
+
+.open-menu {
+    top: 50%;
+    right: 5vh;
+    transform: translateY(-50%);
+}
+
+.close-menu {
+    top: 4vh;
+    right: 5vh;
+}
+
+#check {
+    display: none;
+}
+
+.left a{
+    color: aliceblue;
+    text-decoration: none;
     font-size: 1.9rem;
 }
 
 .fsec {
-    padding: 10rem;
-    padding-bottom: 18rem;
+    padding: 9vw;
+    padding-bottom: 13vw;
     background-color: rgb(201, 212, 218);
 }
 
 .fsec h1 {
-
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 5rem;
+    margin-bottom: 1.5vw;
 }
 
 .fsec div {
@@ -78,19 +106,7 @@ nav ul {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1.5rem;
-}
-
-.ssec {
-    height: 20vh;
-}
-
-.ssec div img {
-    width: 30%;
-    display: inline-block;
-    position: relative;
-    top: -15rem;
-    left: 55rem;
+    font-size: 1.9rem;
 }
 
 .container {
@@ -100,55 +116,31 @@ nav ul {
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    background-color: rgb(195, 213, 213);
 }
 
 .box {
-    width: 45vh;
-    height: 55vh;
-    background-color: rgb(235, 228, 161);
+    width: 70vw;
+    height: 30vh;
     margin: 0.5rem 0.5rem;
-    border-radius: 2rem;
     padding: 7.5vh;
-    box-shadow: 1rem 1rem 1rem 0.3rem rgb(216, 208, 131);
-    transition: all 0.2s ease-in 0s;
-}
-
-.box:hover{
-    width: 47vh;
-    height: 57vh;
-    border-radius: 3rem;
-    box-shadow: 1.2rem 1.2rem 1.2rem 0.3rem rgb(216, 208, 131);
+    padding-bottom: 0%;
+    padding-top: 14vh;
+    margin-bottom: 6vh;
 }
 
 .box h2 {
-    font-size: 2.5rem;
+    font-size: 3rem;
     margin: 0rem 1rem;
     margin-bottom: 2rem;
 }
 
 .box p {
-    font-size: 2rem;
+    font-size: 1.9rem;
 }
 
 .box p a {
     color: rgb(158, 121, 95);
-}
-
-#box-1 {
-    position: relative;
-    left: -20rem;
-}
-
-#box-2 {
-    position: relative;
-    left: 20rem;
-    top: -5rem;
-}
-
-#box-3 {
-    position: relative;
-    left: -20rem;
-    top: -10rem;
 }
 
 footer {
@@ -187,5 +179,201 @@ footer div ul li a:hover {
     justify-content: center;
     align-items: center;
     font-size: 0.9rem;
+}
 
+@media only screen and (max-width: 900px){
+    nav{
+        flex-direction: column;
+    }
+    .left{
+        align-self: start;
+        padding: 3vh 0;
+        padding-left: 8vh;
+    }
+    .right{
+        width: 40%;
+        height: 70%;
+        position: fixed;
+        top: 0;
+        right: -100%;
+        z-index: 100;
+        background-color: rgb(25, 23, 31);
+        opacity: 0.95;
+        transition: all 0.2s ease-in-out;
+    }
+    .right ul{
+        margin: 15vh 2vh;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    nav ul li {
+        margin: 4vh 2vh;
+    }
+    nav ul li a {
+        padding: 10px;
+    }
+    .open-menu , .close-menu {
+        display: block;
+    }
+    #check:checked ~ .right{
+        right: 0;
+    }
+    .fsec h1 {
+        font-size: 2.7rem;
+        margin-bottom: 1.5vw;
+    }
+    .fsec div {
+        font-size: 1.5rem;
+    }
+    .box{
+        height: 9rem;
+        padding-top: 4rem;
+        margin-bottom: 0%;
+    }
+    .box h2 {
+        font-size: 2rem;
+        margin: 0rem 1rem;
+        /* margin-bottom: 2rem; */
+    }
+    .box p {
+        font-size: 1.2rem;
+    }
+    footer {
+        padding: 2.4vw;
+        background-color: black;
+        color: azure;
+    }
+    footer .left{
+        font-size: 1.4rem;
+    } 
+    footer h1{
+        margin: 3vw 2.5vw;
+        font-size: 2rem;
+    } 
+    footer h1+div{
+        font-size: 1.5rem;
+        margin: 0vw 2.5vw;
+    }
+    footer div ul li{
+        margin: 1.2vw 8.4vw;
+        list-style: none;
+        font-size: 1rem;
+    }
+    footer div ul li a {
+        color: azure;
+        text-decoration: none;
+        font-size: 1rem;
+    }
+    footer div ul li a:hover {
+        color: beige;
+        font-size: 1.1rem;
+    }
+    .cpyr {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 0.9rem;
+    }
+}
+@media only screen and (max-width: 700px){
+    .box{
+        height: 12rem;
+        padding-top: 4rem;
+        margin-bottom: 0%;
+    }
+}
+@media only screen and (max-width: 500px){
+    nav{
+        flex-direction: column;
+    }
+    .left{
+        align-self: start;
+        padding: 3vh 0;
+        padding-left: 8vh;
+    }
+    .right{
+        width: 70%;
+        height: 65%;
+        position: fixed;
+        top: 0;
+        right: -100%;
+        z-index: 100;
+        background-color: rgb(25, 23, 31);
+        opacity: 0.95;
+        transition: all 0.2s ease-in-out;
+    }
+    .right ul{
+        margin: 20vh 4vh;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    nav ul li {
+        margin-top: 40px;
+    }
+    nav ul li a {
+        padding: 10px;
+    }
+    .open-menu , .close-menu {
+        display: block;
+    }
+    #check:checked ~ .right{
+        right: 0;
+    }
+    .fsec h1 {
+        font-size: 6.5vh;
+        margin-bottom: 1.5vw;
+    }
+    .fsec div {
+        font-size: 3vh;
+    }
+    .box{
+        height: 39vh;
+        padding-top: 4rem;
+        margin-bottom: 0%;
+    }
+    .box h2 {
+        font-size: 2rem;
+        margin: 0rem 1rem;
+    }
+    .box p {
+        font-size: 1.2rem;
+    }
+    footer {
+        padding: 2.4vw;
+        background-color: black;
+        color: azure;
+    }
+    footer .left{
+        font-size: 4vw;
+    } 
+    footer h1{
+        margin: 3vw 2.5vw;
+        font-size: 7vw;
+    } 
+    footer h1+div{
+        font-size: 5vw;
+        margin: 0vw 2.5vw;
+    }
+    footer div ul li{
+        margin: 1.2vw 8.4vw;
+        list-style: none;
+        font-size: 3vw;
+    }
+    footer div ul li a {
+        color: azure;
+        text-decoration: none;
+        font-size: 3vw;
+    }
+    footer div ul li a:hover {
+        color: beige;
+        font-size: 3.1vw;
+    }
+    .cpyr {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 2.1vw;
+    }
 }
